--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     <!-- 7. Download -->
     <div id="download">
         <p>Downloading resume..<br> 
-        Note: If you are facing any problem, then click <strong><a href="./resume.pdf">HERE</a></strong> to download</p>
+        Note: If you are facing any problem, then click <strong><a href="./shervin_salmanizadeh_resume.pdf">HERE</a></strong> to download</p>
     </div>
 
     <!-- 8. Error -->
